[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "PyPoE"
version = "1.1.0"
description = "A suite of tools to export game data for Path of Exile"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "PyPoE", from = "." },
]

[tool.poetry.scripts]
pypoe_exporter = 'PyPoE.cli.exporter.core:main'
pypoe_schema_import = 'PyPoE.poe.file.specification.generation.import_dat_schema:main'

[tool.poetry.dependencies]
python = "^3.11"
configobj = "^5.0.6"
colorama = "^0.4.6"
tqdm = "^4.64.1"
mwclient = "^0.10.1"
mwparserfromhell = "^0.6.4"
rapidfuzz = "^2.13.7"
pydds = "~0.0.5"
pyooz = "~0.0.6"
fnvhash = "^0.1.0"
brotli = "^1.0.9"
matplotlib = "^3.8.2"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
